<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuego Peligro</string>

    <string name="title_activity_information">InformationActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="return_to_game">RETURN TO MENU</string>
    <string name="fuego_peligro">Fuego Peligro</string>
    <string name="todo">TODO</string>
    <string name="fuego_peligro_game">FUEGO PELIGRO GAME</string>
    <string name="fire_safety_and_hazards_app">FIRE SAFETY AND HAZARDS APP</string>
    <string name="exit">Exit</string>
    <string name="fire_incident_sent">Fire Sent</string>
    <string name="back_to_menu">back to menu</string>
    <string name="send_another_incident">send another fire</string>
    <string name="residential_fire">Residential Fire</string>
    <string name="school_institution_fire">School/Institution Fire</string>
    <string name="fire_location">Fire Location (Lattitude, Longitude)</string>
    <string name="send_fire_incident">Send via E-mail</string>
    <string name="open_camera">Open Camera</string>
    <string name="reset_location">reset location</string>
    <string name="find_on_google_maps">Find on Google Maps</string>
    <string name="image_of_fire">Image of Fire</string>
    <string name="fire_type">Fire Location Type</string>
    <string name="enter_the_fire_location">Enter the fire location</string>
    <string name="send_a_fire">Send-A-Fire</string>
    <string name="grass_open_field_fire">Grass/Open Field Fire</string>
    <string name="government_building_fire">Government Building Fire</string>
    <string name="industrial_fire">Industrial Fire</string>
    <string name="high_rise_building_fire">High Rise/Building Fire</string>
    <string name="commercial_fire">Commercial Fire</string>
    <string name="office_business_fire">Office/Business Fire</string>
    <string name="fire_sent_fail">Fire Sent Fail</string>
    <string name="re_send_incident">Re-send Incident</string>
    <string name="title_activity_maps">Map</string>
    <string name="back">Back</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="click_on_button_to_capture_image">Click on button to capture image</string>
    <string name="send_via_mms">Send via MMS</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="fire_location_lat_long">Fire Location (Lat, Long)</string>
    <string name="fire_type_2">Fire Type</string>
    <string name="fire_image">Fire Image</string>
    <string name="latest_fire_information">Latest Fire Information</string>
    <string name="fire_sender_name">Fire Sender Name and Number</string>
    <string name="nulls">null</string>
    <string name="list_of_fires">List of Fires</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="sender_activity">Sender Activity</string>
    <string name="login_activity">Login Activity</string>
    <string name="game_activity">Game Activity</string>
    <string name="web_activity">Web Activity</string>
    <string name="maps_activity">Maps Activity</string>
    <string name="reciever_activity">Reciever Activity</string>
    <string name="lister_activity">Lister Activity</string>
    <string name="menu_activity">Menu Activity</string>
    <string name="refresh">Refresh</string>
    <string name="call_sender">Call Sender</string>
    <string name="next">next</string>
    <string name="previous">previous</string>

</resources>
